fix unaligned box

--- a/src/pages/Submit/styles.scss
+++ b/src/pages/Submit/styles.scss
@@ -787,7 +787,8 @@
       }
 
       &-encodings {
-        @include centered-row;
+        display: flex;
+        flex-direction: row;
 
         .parse-content {
           &:last-child {
